--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "appcenter": "^4.1.0",
+    "appcenter-analytics": "^4.1.0",
+    "appcenter-crashes": "^4.1.0",
+    "axios": "^0.21.1",
     "deepmerge": "^4.2.2",
+    "install": "^0.13.0",
     "lpf": "^1.0.0",
     "native-base": "^2.15.2",
     "react": "17.0.1",
@@ -46,5 +51,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "App/Assets/Fonts"
+    ]
   }
 }
