--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/netinfo": "^6.0.0",
     "@react-native-cookies/cookies": "^6.0.7",
     "@react-native-masked-view/masked-view": "^0.2.4",
+    "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
@@ -33,6 +34,7 @@
     "react": "17.0.1",
     "react-hook-form": "^7.4.2",
     "react-native": "0.64.1",
+    "react-native-bootsplash": "^3.2.3",
     "react-native-compass-heading": "^1.2.1",
     "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
@@ -47,6 +49,7 @@
     "react-native-screens": "^3.2.0",
     "react-native-sensors": "^7.2.0",
     "react-native-skeleton-placeholder": "^4.0.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "11.4.5",
     "react-native-youtube-iframe": "^2.0.1",
