--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "appcenter-analytics": "^4.1.0",
     "appcenter-crashes": "^4.1.0",
     "axios": "^0.21.1",
+    "convert-units": "^2.3.4",
     "deepmerge": "^4.2.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "query-string": "^7.0.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-app-auth": "^6.3.0",
     "react-native-compass-heading": "^1.2.1",
     "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
@@ -44,12 +46,12 @@
     "react-native-sensors": "^7.2.0",
     "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "11.4.5",
     "react-native-youtube-iframe": "^2.0.1",
     "react-native-zohodesk-portal-sdk": "^1.0.1",
-    "react-query": "^3.16.0",
-    "units-converter": "^1.0.3"
+    "react-query": "^3.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
